--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 #
 .DS_Store
 
+# Android
+/android/
+
+# ios
+/ios/
+
 # IntelliJ
 #
 build/
@@ -28,3 +34,6 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+# Watchman
+.watchmanconfig
